# couch-pilot

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPROVEMENTS.md  LICENSE  Makefile  README.md  SECURITY.md  app.py  config.py  logging_config.py  pyproject.toml
.cursor/skills/ui-skills/: SKILL.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
devices/: __init__.py  base.py  discovery.py  tapo.py
static/css/: style.css
static/js/: chat.js
templates/: chat.html
tests/: test_api.py  test_config.py  test_discovery.py  test_tv_tools.py
tools/: __init__.py  tv_tools.py
