[project]
name = "couch-pilot"
version = "0.1.0"
description = "AI-powered TV control via natural language chat"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.0.0",
    "pychromecast>=14.0.0",
    "PyP100>=0.1.2",
    "tinytuya>=1.13.0",
    "pyvesync>=2.1.0",
    "aiohttp>=3.9.0",
    "zeroconf>=0.131.0",
    "httpx>=0.27.0",
    "aiowebostv>=0.7.5",
    "python-kasa>=0.10.2",
    "tapo>=0.8.8",
    "pyatv>=0.16.1",
    "claude-agent-sdk>=0.1.18",
    "anthropic>=0.75.0",
]

[project.scripts]
smart-home = "app:main"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "ty>=0.0.1a6",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pre-commit>=4.5.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["config", "devices", "tools"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
